fix Zeta @import variable problem... and some gap in columns
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@4528 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/resources/scss/_column-widgets.scss
+++ b/resources/scss/_column-widgets.scss
@@ -1,9 +1,6 @@
-.x-left-column { margin: auto 5px auto auto; }
-.x-right-column { margin: auto auto auto 5px;}
-
 div.sidebar-content {
-	.x-left-column & { @extend .x-left-column; }
-	.x-right-column & { @extend .x-right-column; }
+	.x-left-column & { margin: auto 5px auto auto; }
+    .x-right-column & { margin: auto auto auto 5px;}
 }
 
 div.sidebar-header {
